re PR c++/30382 (ICE in build_enumerator, at cp/decl.c:10111)

PR c++/30382
	Backported from mainline:
	2006-06-29  Jason Merrill  <jason@redhat.com>
	* parser.c (cp_parser_enum_specifier): Return early if
	type is error_mark_node.

From-SVN: r120490